# Omnix

./: .gitignore  CMakeLists.txt  Info.plist.in  README.md  build.sh  keepinmind.txt  lib_build.sh
Engine/: CMakeLists.txt
Engine/include/: Main.h++  Status.hpp  ecs.hpp
Engine/lib/: CMakeCache.txt  Makefile  cmake_install.cmake
Engine/src/: EngineInit.cpp  File.cpp  Main.c++  Status.cpp  ecs.cpp
defaults/: imgui.ini
resources/: Omnix.icns
scripts/: entitlements.plist  package_local.sh  package_local_pkg.sh  sign_and_notarize.sh
scripts/pkg_resources/: readme.html  welcome.html
src/: Camera.cpp  Camera.h  Panels.cpp  Panels.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  UI.cpp  UI.h  WindowManager.h  WindowManager.mm  main.cpp
src/EngineLib/: EngineInit.hpp  File.hpp  Status.hpp  ecs.hpp
